# fasta_tidy

./: README.md  pyproject.toml
src/: fasta_tidy.py
src/fasta_tidy/: main.py
test/: test_fasta_tidy.py
test/data/: neat20.fa  neat80.fa  ragged.fa
