[project]
name = "fasta-tidy"
version = "0.1.0"
description = "Reformats a FASTA file so sequences are wrapped at a fixed line length."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "rich>=13.9.4",
    "rich-click>=1.8.6",
]

[tool.setuptools]
packages = ["src"]

[project.scripts]
fasta_tidy = "src.fasta_tidy:main"
